sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ';' expected but 'while' found.
   	}while(
         ^AlgBubbleSort1:10: error: 'while' expected but '}' found.
   }
   ^